<resources>
    <string name="app_name">AutoInfo</string>
    <string name="title_activity_car_list">List of cars</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Database nodes -->
    <string name="node_users">users</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <!--String for facebook app D -->
    <string name="facebook_app_id">336799580175537</string>
    <string name="fb_login_protocol_scheme">fb336799580175537</string>

    <!-- Google Map API_KEY -->
    <string name="google_maps_key" translatable="false"
        templateMergeStrategy="preserve">AIzaSyBvZqCJFQ40kor1y-6DhpXZTK_8S9O8NqI</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="refresh">Refresh</string>
    <!-- Layout Titles -->
    <string name="title_activity_register">registration</string>
    <string name="title_activity_account">Your Account</string>
    <string name="title_map_activity">Maps</string>
    <string name="link">Link:</string>
    <string name="description">Description</string>
    <string name="car_image">Car Image</string>
    <string name="Name">Name</string>
    <string name="Year">Year</string>
    <string name="Price">Price</string>
    <string name="click_for_location">Click for location</string>
    <string name="user_name">user name</string>
    <string name="favourite_cars">Favourite Cars</string>
    <string name="rank">Rank</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="sign_out">sign out</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="log_in">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>

    <string name="edit_profile_name">New Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <string name="todo_1">TODO</string>
    <string name="title">TITLE</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo01">TODO</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="images">Images</string>
    <string name="auto_info">Auto Info</string>
    <string name="age">Age</string>
    <string name="expert">Expert</string>
    <string name="update">update</string>
    <string name="send">Send</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="new_name">New Name</string>
    <string name="new_age">New Age</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="monthdayyear">%d/%d/%d</string>
    <string name="tutorial">Tutorial</string>
    <string name="save_picture">Save Picture</string>
    <string name="save_name">Save Name</string>
    <string name="testtext">TestText</string>
    <string name="testtext0">TestText</string>
    <string name="testtext11">TestText</string>
    <string name="textview_">TextView</string>
    <string name="textview_0">TextView</string>
    <string name="test1">TEST</string>
    <string name="test10">TEST</string>
</resources>
