<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chat"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@drawable/gradientbackground"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/White"
            android:fontFamily="@font/instafont"
            android:text="@string/auto_info"
            android:textSize="30sp"
            android:gravity="center"
            tools:targetApi="jelly_bean" />
        <ImageButton
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/transparent_img"
            android:id="@+id/ed_profile"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />
        <ImageButton
            android:layout_alignParentLeft="true"
            android:id="@+id/arrow_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/transparent_img"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo1" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="35dp"
        android:layout_height="match_parent">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:divider="#fff"
            android:dividerHeight="0.5dp"
            android:id="@+id/listview"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            android:layout_weight="0.9">
        </ListView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_weight="0.1"
            android:layout_height="0dp">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:id="@+id/edittext"
                    android:layout_weight="0.8"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/send"
                android:layout_gravity="bottom"
                android:background="@drawable/white_onclick_grey"
                android:onClick="send"
                android:layout_weight="0.2" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/gradientbackground">
            <android.support.design.widget.BottomNavigationView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/navigation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:menu="@menu/my_navigation_items"
                android:background="@drawable/gradientbotbar">
            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

